# RagForge

./: .gitignore  README.md  pyproject.toml  ragforge.db
src/config/: __init__.py  constants.py
src/ragforge/: main.py
src/ragforge/config/: __init__.py  constants.py  environment.py  file_types.py  prompts.py
src/ragforge/core/: __init__.py  exceptions.py  logger.py
src/ragforge/db/: base.py  session.py
src/ragforge/dependencies/: auth.py  db.py
src/ragforge/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  user.py
src/ragforge/routes/: auth_routes.py  conversation_routes.py  file_routes.py  index.py  process_routes.py
src/ragforge/schemas/: __init__.py  auth.py  conversation.py  file.py
src/ragforge/services/: auth_service.py  chunk_service.py  conversation_service.py  document_service.py  file_service.py  ingestion_service.py  llm_service.py  process_service.py  rag_chain.py  retrieval_service.py  streaming_service.py  unstructured_service.py  vector_service.py
tests/: conftest.py  verify_config.py
tests/core/: test_core.py
tests/db/: test_auth_dependencies.py  test_chat_memory_models.py  test_database_base.py  test_dependencies.py  test_document_chunk_models.py  test_session.py  test_user_model.py
tests/routes/: test_auth_routes.py  test_conversation_routes.py  test_file_process_routes.py  test_router_aggregation.py
tests/schemas/: test_auth_schemas.py  test_auth_service.py
tests/services/: test_chunk_service.py  test_conversation_service.py  test_document_service.py  test_file_service.py  test_ingestion_service.py  test_llm_service.py  test_process_service.py  test_retrieval_service.py  test_streaming_service.py  test_unstructured_service.py  test_vector_service.py
