[project]
name = "ragforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.1",
    "httpx2>=2.5.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "unstructured[all-docs]>=0.23.1",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
